Configured JaCoCo in gradle